= SeqAn Changelog =

Add a new list item '''AT THE TOP''' for each change (excluding trivial things like changes to whitespace and comments).
Link to changsets with `[CHANGESET-NUMBER]` and tickets with `#TICKET-NUMBER` whenever possible.
You can use Trac wiki syntax.

== Trunk ==

 * Adding Union-Find data structure in `misc/misc_union_find.d`.
 * fixing `eraseBack()` with block strings.
 * Using Union-Find data structure in Kruskal's algorithm to improve the running time to `O(m log m)`.
 * Changed `resizeVertexMap` and `resizeEdgeMap`. The two-parameter versions have similar semantics as before and initialize the map with 0. The three-parameter versions expect an additional "prototype version" that is copied/assigned into the map. The old copy-from-arrayy versions are now called `assignVertexMap` and `assignEdgeMap`. Also updated the tutorial.
 * Adding documentation of graph iterator constructors.
 * Adding full segment support for journaled strings, including segment assignment, e.g. `infix(journaledString, 0, 10) = DnaString("CGAT")`.
 * Adding `position()`, `operator-()`, `operator[]` with proxy functionality and relation operators to journaled string iterator.
 * Adding metafunction `GetDefaultRng<T>::Type` and function `defaultRng()` for construction of global random number generators to be used by default in randomized data structures and algorithms.
 * Adding specialization of Uniform probability density function for `bool`s and tests.
 * Documented `getQuality`.

== Release 1.2 ==

 * Splitting file ''sequence_multiple.h'' into ''string_set*.h'', ''iter_concat_virtual.h'', and ''sequence_concatenator.h''.
 * Bound check in `iter()`.
 * Adding `SEQAN_IS_64_BIT` and `SEQAN_IS_64_BIT` macros, defined to either `0` or `1`, depending on the platform.
 * Adjusting `MUM` and `MEM` to new naming schema. (#836)
 * Adding `SEQAN_OMP_PRAGMA` to hide `#pragma omp` when not compiling with OpenMP to suppress warnings. (#353)